fixed spacing for smileys in emotionDNA

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,11 @@
     border-radius: 0 !important; 
 }
 
+.emotionalDNA {
+    padding-top:20px;
+    padding-left:40px;
+}
+
 #viewToggle .ui-radio {
 }
 
